--- a/package.json
+++ b/package.json
@@ -10,17 +10,22 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "pinia": "^2.1.7",
+    "pinia-plugin-persist": "^1.0.0",
+    "quasar": "^2.14.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
+    "@arco-design/web-vue": "^2.53.2",
     "@rushstack/eslint-patch": "^1.3.3",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "prettier": "^3.0.3",
+    "sass": "^1.69.5",
     "vite": "^4.4.11"
   }
 }
